2009-05-09
	* Allow the use of '#' for comments within text area (can be escaped with
	'\#'

2009-05-07
	* Fix occasional cpubar segfaults
	* Added top_name_width config option

2009-05-05
	* Added some completely pointless OpenMP optimizations(?)

2009-05-03
	* Added Sony VAIO fanspeed info (thanks Yeon-Hyeong)

2009-05-01
	* Added diskio_avg_samples patch (thanks Yeon-Hyeong)
	* Fixed $texeci regression

2009-04-30
	* Added $combine, a var that places 2 other vars next to each other, even if they
	have a output of multiple lines. This also makes the moving of RSS-itemes with
	$goto (see change from 2009-04-19) no longer necessary.

2009-04-28
	* Various XMMS2 updates (thanks Lassi)
	* Make ALSA mixers available on Linux, and added $if_mixer_mute (thanks

2009-04-19
	* Make it possible to place spaces in front of RSS-items as a workaround
	for the problem that $goto only moves the first RSS-item. This is only a
	workaround and should be replaced by a permanent fix that makes $goto move
	all RSS-items !

2009-04-13
	* Fix broken compilation without X11

2009-04-09
	* Added default_bar/graph/gauge_size config options (thanks wire64 for the
	idea)

2009-03-24
	* Added eval text object to realise double parsing

2009-03-15
	* Added gauge widget patch, sf.net id #2676128 (thanks Aner)

2009-05-01
	* Conky 1.7.0 "Hungry Hobo" released!

2009-04-28
	* Various XMMS2 updates (thanks Lassi)

2009-04-09
	* Fix broken xmms2 compilation (thanks fusetak)
	* Minor fix for fs_used_perc, fs_free and fs_free_perc (thanks
	lightpriest)

2009-03-28
	* Applied FreeBSD patches (thanks Nikos)

2009-03-16
	* Fix bug with wacky netstat values on startup

2009-03-15
	* Added extra newline patch, sf.net id #2638601 (thanks Ali)
	* Disk i/o support on FreeBSD patch, sf.net id #2657227 (thanks Nikos)
	* Added gauge widget patch, sf.net id #2676128 (thanks Aner)

2009-03-07
	* Added alias patch ( sf.net id #2663691 ) changed it to prevent it from