@@ -213,6 +213,26 @@ dnl
 dnl Math
 dnl
 
+
+dnl
+dnl Apcupsd
+dnl
+
+AC_ARG_ENABLE([apcupsd],
+              AC_HELP_STRING([--disable-apcupsd],
+                             [disable if you do not want apcupsd support @<:@default=yes@:>@]),
+              [want_apcupsd="$enableval"], [want_apcupsd=yes])
+
+AM_CONDITIONAL(BUILD_APCUPSD, test x$want_apcupsd = xyes)
+if test x$want_apcupsd = xyes; then
+  if test x"$uname" != xLinux; then
+      AC_MSG_NOTICE([apcupsd not supported on $uname... disabling])
+      want_apcupsd=no
+  else
+      AC_DEFINE(APCUPSD, 1, [Define if you want apcupsd support])
+  fi
+fi
+
 AC_ARG_ENABLE([math],
               AC_HELP_STRING([--disable-math], [disable if you do not want math support @<:@default=yes@:>@]),
               [want_math="$enableval"], [want_math=yes])
@@ -767,4 +787,5 @@ $PACKAGE $VERSION configured successfully:
   eve-online:       $want_eve
   config-output:    $want_config_output
   ALSA mixer:       $want_alsa
+  apcupsd:          $want_apcupsd
 EOF
