@@ -87,6 +87,134 @@
 
 	<varlistentry>
 		<term>
+			<command><option>apcupsd</option></command>
+			<option>host</option>
+			<option>port</option>
+		</term>
+		<listitem>
+			Sets up the connection to apcupsd daemon. Prints nothing, defaults to localhost:3551
+			<para></para></listitem>
+	</varlistentry>
+
+	<varlistentry>
+		<term>
+			<command><option>apcupsd_name</option></command>
+		</term>
+		<listitem>
+			Prints the UPS user-defined name.
+			<para></para></listitem>
+	</varlistentry>
+
+	<varlistentry>
+		<term>
+			<command><option>apcupsd_model</option></command>
+		</term>
+		<listitem>
+			Prints the model of the UPS.
+			<para></para></listitem>
+	</varlistentry>
+
+	<varlistentry>
+		<term>
+			<command><option>apcupsd_upsmode</option></command>
+		</term>
+		<listitem>
+			Prints the UPS mode (e.g. standalone).
+			<para></para></listitem>
+	</varlistentry>
+
+	<varlistentry>
+		<term>
+			<command><option>apcupsd_cable</option></command>
+		</term>
+		<listitem>
+			Prints the UPS connection type.
+			<para></para></listitem>
+	</varlistentry>
+
+	<varlistentry>
+		<term>
+			<command><option>apcupsd_status</option></command>
+		</term>
+		<listitem>
+			Prints current status (on-line, on-battery).
+			<para></para></listitem>
+	</varlistentry>
+
+	<varlistentry>
+		<term>
+			<command><option>apcupsd_linev</option></command>
+		</term>
+		<listitem>
+			Nominal input voltage.
+			<para></para></listitem>
+	</varlistentry>
+
+	<varlistentry>
+		<term>
+			<command><option>apcupsd_load</option></command>
+		</term>
+		<listitem>
+			Current load in percent.
+			<para></para></listitem>
+	</varlistentry>
+
+	<varlistentry>
+		<term>
+			<command><option>apcupsd_loadbar</option></command>
+		</term>
+		<listitem>
+			Bar showing current load.
+			<para></para></listitem>
+	</varlistentry>
+
+	<varlistentry>
+		<term>
+			<command><option>apcupsd_loadgraph</option></command>
+		</term>
+		<listitem>
+			History graph of current load.
+			<para></para></listitem>
+	</varlistentry>
+
+	<varlistentry>
+		<term>
+			<command><option>apcupsd_charge</option></command>
+		</term>
+		<listitem>
+			Current battery capacity in percent.
+			<para></para></listitem>
+	</varlistentry>
+
+	<varlistentry>
+		<term>
+			<command><option>apcupsd_timeleft</option></command>
+		</term>
+		<listitem>
+			Time left to run on battery.
+			<para></para></listitem>
+	</varlistentry>
+
+	<varlistentry>
+		<term>
+			<command><option>apcupsd_temp</option></command>
+		</term>
+		<listitem>
+			Current internal temperature.
+			<para></para></listitem>
+	</varlistentry>
+
+	<varlistentry>
+		<term>
+			<command><option>apcupsd_lastxfer</option></command>
+		</term>
+		<listitem>
+			Reason for last transfer from line to battery.
+			<para></para></listitem>
+	</varlistentry>
+
+	<varlistentry>
+		<term>
 			<command><option>apm_adapter</option></command>
 		</term>
 		<listitem>
