@@ -1,3 +1,6 @@
+2009-05-10
+	* Added support for APC UPS daemon monitoring
+
 2009-05-09
 	* Allow the use of '#' for comments within text area (can be escaped with
 	'\#'
